[tool.poetry]
name = "langchain-ragie"
version = "0.3.0"
description = "Ragie integration for LangChain"
authors = ["Bob Remeika <bob@ragie.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain-core = "^0.3"
ragie = "^1.0.1"

[tool.poetry.group.dev.dependencies]
langchain-openai = "^0.2"
ruff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
